[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Scripts/ScavengeHud.gd" id="1"]

[node name="ScavengeHud" type="CanvasLayer"]
layer = 16
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 16.0
offset_top = 16.0
offset_right = 280.0
offset_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
theme_override_constants/separation = 6

[node name="HpLabel" type="Label" parent="MarginContainer/VBoxContainer"]
text = "HP"

[node name="HpBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 18)
max_value = 100.0
value = 100.0

[node name="AmmoLabel" type="Label" parent="MarginContainer/VBoxContainer"]
text = "Ammo: 0"

[node name="CarryLabel" type="Label" parent="MarginContainer/VBoxContainer"]
text = "Carry rank: 1"

[node name="PhaseLabel" type="Label" parent="MarginContainer/VBoxContainer"]
text = "Phase: QUIET"
